# TLogic

./: README.md  pyproject.toml
data/icews0515/: entity2id.json  relation2id.json  statistics.yaml  ts2id.json
data/icews14/: entity2id.json  relation2id.json  statistics.yaml  test.txt  ts2id.json  valid.txt
data/icews18/: entity2id.json  relation2id.json  statistics.yaml  test.txt  ts2id.json  valid.txt
mycode/: apply.py  baseline.py  demo.ipynb  evaluate.py  grapher.py  learn.py  rule_application.py  rule_learning.py  run.txt  score_functions.py  temporal_walk.py
