[tool.poetry]
name = "logical-tkgs"
version = "0.1.0"
description = ""
authors = ["Yushan Liu <yushan.liu@siemens.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
joblib = "^1.1.0"
pandas = "^1.3.4"
notebook = "^6.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
